[project]
name = "openap-top"
version = "1.10"
description = "Trajectory OPtimizer based on OpenAP model"
authors = [{ name = "Junzi Sun", email = "git@junzis.com" }]
license = { text = "GNU LGPL v3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "openap>=2.4",
    "casadi>=3.6",
    "pyproj>=3.4",
    "scikit-learn>=1.4.0",
    "cartopy>=0.23.0",
    "xarray>=2024.0",
    # "cfgrib>=0.9.9",
    # "ecmwflibs>=0.6",
]

[project.urls]
homepage = "https://openap.dev"
repository = "https://github.com/junzis/openap-top"
issues = "https://github.com/junzis/openap-top/issues"

[dependency-groups]
dev = [
    "flake8>=5.0.0",
    "black>=22.12.0",
    "isort>=5.11.4",
    "ipykernel>=6.29.5",
    # "mypy>=0.991",
    "pytest>=7.2.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj"]


[tool.hatch.metadata]
allow-namespace-packages = true

[tool.hatch.build.targets.wheel]
universal = true
packages = ["openap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
