[project]
name = "opentop"
version = "2.1.0"
description = "Trajectory OPtimizer based on OpenAP model"
authors = [{ name = "Junzi Sun", email = "git@junzis.com" }]
license = { text = "GNU LGPL v3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "openap>=2.5",
    "casadi>=3.7",
    "pyproj>=3.7",
    "scikit-learn>=1.8",
    "cartopy>=0.25",
    "xarray>=2026.2",
    "click>=8.3",
    "pyarrow>=23.0",
    # "cfgrib>=0.9.9",
    # "ecmwflibs>=0.6",
]

[project.scripts]
opentop = "opentop.cli:main"

[project.urls]
homepage = "https://openap.dev"
repository = "https://github.com/junzis/opentop"
issues = "https://github.com/junzis/opentop/issues"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ipykernel>=7.2",
    "pytest>=9.0",
    "pytest-xdist>=3.8",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["opentop"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = false          # CasADi / pyproj / sklearn / openap don't ship stubs

[tool.hatch.build.targets.wheel]
universal = true
packages = ["opentop"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
